--- a/index.html
+++ b/index.html
@@ -6,5 +6,24 @@
 <body>
     <h1>Hello Github Page</h1>
     <p>by @tumbj</p>
+    <hr>
+
+    <div>Division 1</div>
+    <div>Division 2</div>
+    <div>
+        Division 3
+    </div>
+    <div>Division 4</div><div>Division 5</div>
+
+    <span>Span 1</span>
+    <span>Span 2</span>
+    <span>
+        Span 3
+    </span>
+    <span>Span 4</span><span>Span 5</span>
+
+
+    <br>
+    <img src="lib/cat.jpg" alt="cat" width="500 " height="275 ">
 </body>
 </html>
