--- a/explainCSS/index.html
+++ b/explainCSS/index.html
@@ -25,9 +25,10 @@
 		<pre>
 			การเลือก selector จะทำการเลือก จาก นอก สุดไปยังในสุด ดังตัวอย่าง
 			จะเลือก ul -> li ที่มี class active -> a 
-				<img src="../explain1.png" alt="explain1" width="500 " height="275 ">
+				
 		</pre>
 	</section>
+	<img src="/explain1.png" alt="explain1" width="500 " height="275 ">
 
 	
 </body>
