--- a/lab/index.html
+++ b/lab/index.html
@@ -25,7 +25,7 @@
 		<pre>
 			การเลือก selector จะทำการเลือก จาก นอก สุดไปยังในสุด ดังตัวอย่าง
 			จะเลือก ul -> li ที่มี class active -> a 
-				<img src="/explain1.png"  width="500 " height="275 ">
+				<img src="lib/explain1.png"  width="500 " height="275 ">
 		</pre>
 	</section>
 
