change color msg

--- a/jquery-lab3/index.html
+++ b/jquery-lab3/index.html
@@ -71,7 +71,7 @@
                 <div class="field is-horizontal">
                     <div class="field-label is-normal">
                         
-                            <label class="label" for="input-text">Search: </label>
+                            <label class="label" for="input-text" style="color:whitesmoke">Search: </label>
                     </div>
                     <div class="field-body">
                         <div class="field">
@@ -90,12 +90,12 @@
             </div>
         </div>
     
-
+    </div>
     <div class="level-item" id="adv-search">
 
         <div id="adv-search">
             <div class="level-item">
-                <p>Provinces : </p>
+                <p style="color:whitesmoke">Provinces : </p>
             </div>
             <div class="select is-rounded level-item">
 
